src/test/deca/syntax/invalid/expr/test_expr_or_one_tab.deca
// Description:
//    tests de programme syntaxiquement incorrects : OR logique avec un seul |
//
// Resultats:
//    Ligne 13: no viable alternative at input 'a'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a == 0 | a==2){
        a = 1;
    }
}